移动端布局

--- a/MobileTerminal/src/index.html
+++ b/MobileTerminal/src/index.html
@@ -9,14 +9,209 @@
 
 <body>
 	<div id="app">
-		<header>
-			<div class="header-top"></div>
-			<div class="header-type"></div>
+		<header class="headbox">
+			<a href="" class="btn_type"></a>
+			<div class="search_box">
+				<form action="" class="search_form">
+					<input type="text" class="search_input" placeholder="荣耀">
+				</form>
+			</div>
+			<a href="" class="shop_car"></a>
 		</header>
-		<section>
-			<ul>
-				<li>测试webpack</li>
+		<section class="wrap">
+			<ul class="banner">
+				<li class="item">
+					<img src="./image/banner.jpg" alt="">
+				</li>
 			</ul>
+			<nav class="nav clearfix">
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+				<a href="" class="nav_item">
+					<img src="./image/ico-nav.jpg" alt="">
+					<strong class="nav_title">大聚惠</strong>
+				</a>
+			</nav>
+			<div class="suning_tt">
+				<div class="tt_title"></div>
+				<div class="tt_line"></div>
+				<div class="tt_list">
+					<a href="" class="item">
+						HTML5移动端布局实战开发课程
+					</a>
+					<a href="" class="item">
+						HTML5移动端布局实战开发课程
+					</a>
+				</div>
+			</div>
+			<div class="shop_type">
+				<div class="type_top clearfix">
+					<a href="" class="big_img">
+						<img src="./image/shoping-1.jpg" alt="">
+					</a>
+					<a href="" class="sub_img">
+						<img src="./image/shoping-2.jpg" alt="">
+					</a>
+					<a href="" class="sub_img">
+						<img src="./image/shoping-2.jpg" alt="">
+					</a>
+				</div>
+				<div class="type_bottom clearfix">
+					<a href="" class="bottom_item">
+						<img src="./image/shoping-3.jpg" alt="">
+					</a>
+					<a href="" class="bottom_item">
+						<img src="./image/shoping-3.jpg" alt="">
+					</a>
+					<a href="" class="bottom_item">
+						<img src="./image/shoping-3.jpg" alt="">
+					</a>
+					<a href="" class="bottom_item">
+						<img src="./image/shoping-3.jpg" alt="">
+					</a>
+					<a href="" class="bottom_item">
+						<img src="./image/shoping-3.jpg" alt="">
+					</a>
+					<a href="" class="bottom_item">
+						<img src="./image/shoping-3.jpg" alt="">
+					</a>
+					<a href="" class="bottom_item">
+						<img src="./image/shoping-3.jpg" alt="">
+					</a>
+					<a href="" class="bottom_item">
+						<img src="./image/shoping-3.jpg" alt="">
+					</a>
+				</div>
+			</div>
+			<div class="suning_qg">
+				<div class="head">
+					<div class="head_left">
+						<div class="title"></div>
+						<div class="time_box">
+							<span class="time_name">
+								20点场
+							</span>
+							<div class="updeta_time">
+								<span class="time_item">03</span>
+								<span class="time_ico">:</span>
+								<span class="time_item">54</span>
+								<span class="time_ico">:</span>
+								<span class="time_item tips">20</span>
+							</div>
+						</div>
+					</div>
+					<div class="head_right">
+						<a href="" class="more">吃货上心季</a>
+						<i class="ico_more"></i>
+					</div>
+				</div>
+				<div class="shoping_box">
+					<ul class="shoping_list clearfix">
+						<li class="list_item">
+							<a href="" class="item_img">
+								<img src="./image/shoping-4.jpg" alt="">
+							</a>
+							<div class="item_bottom">
+								<strong class="jiage">￥15.90</strong>
+								<del class="yuanjia">￥50.90</del>
+								<div class="zhekou">
+									<span class="big_font">5.<span>8折</span></span>
+								</div>
+							</div>
+						</li>
+						<li class="list_item">
+							<a href="" class="item_img">
+								<img src="./image/shoping-4.jpg" alt="">
+							</a>
+							<div class="item_bottom">
+								<strong class="jiage">￥15.90</strong>
+								<del class="yuanjia">￥50.90</del>
+								<div class="zhekou">
+									<span class="big_font">5.
+										<span>8折</span>
+									</span>
+								</div>
+							</div>
+						</li>
+						<li class="list_item">
+							<a href="" class="item_img">
+								<img src="./image/shoping-4.jpg" alt="">
+							</a>
+							<div class="item_bottom">
+								<strong class="jiage">￥15.90</strong>
+								<del class="yuanjia">￥50.90</del>
+								<div class="zhekou">
+									<span class="big_font">5.
+										<span>8折</span>
+									</span>
+								</div>
+							</div>
+						</li>
+						<li class="list_item">
+							<a href="" class="item_img">
+								<img src="./image/shoping-4.jpg" alt="">
+							</a>
+							<div class="item_bottom">
+								<strong class="jiage">￥15.90</strong>
+								<del class="yuanjia">￥50.90</del>
+								<div class="zhekou">
+									<span class="big_font">5.
+										<span>8折</span>
+									</span>
+								</div>
+							</div>
+						</li>
+						<li class="list_item">
+							<a href="" class="item_img">
+								<img src="./image/shoping-4.jpg" alt="">
+							</a>
+							<div class="item_bottom">
+								<strong class="jiage">￥15.90</strong>
+								<del class="yuanjia">￥50.90</del>
+								<div class="zhekou">
+									<span class="big_font">5.
+										<span>8折</span>
+									</span>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</section>
 	</div>
 </body>
