--- a/MobileTerminal/src/index.html
+++ b/MobileTerminal/src/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=3.0"> -->
 	<title>Document</title>
 </head>
 
@@ -24,7 +25,7 @@
 					<img src="./image/banner.jpg" alt="">
 				</li>
 			</ul>
-			<nav class="nav clearfix">
+			<nav class="nav clearfix wrap_main">
 				<a href="" class="nav_item">
 					<img src="./image/ico-nav.jpg" alt="">
 					<strong class="nav_title">大聚惠</strong>
